# valiant

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  clean.sh  index.html  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  pytype.cfg  search.html  sitemap.xml
.github/workflows/: default.yaml  periodic.yaml
cli/: index.html
configuration/: index.html
demo/opa/: index.html  pyproject.toml  requirements.txt  valiant_audit_good.json
demo/opa/input/: input_2.json
demo/opa/policies/: audit.rego  dependency.rego
demo/opa/policies/test/audit/: license_test.rego  vulnerable_test.rego
demo/opa/report/: django.json  flask.json
docs/: cli.md  configuration.md  index.md  limitations.md  plugins.md  providers.md  walkthrough.md
docs/demo/: opa.md
docs/demo/opa/: pyproject.toml  requirements_good.txt  valiant_audit.json
docs/demo/opa/basic/: basic.rego  basic_test.rego
docs/demo/opa/example/: example.rego
docs/demo/opa/input/: input_1.json  license_test.rego
docs/demo/opa/report/: valiant.json
limitations/: index.html
plugins/: index.html
providers/: index.html
search/: search_index.json
src/valiant/: __about__.py  __init__.py  __main__.py  __version__.py  exceptions.py  valiant.py
src/valiant/config/: __init__.py  builder.py  config.py  default_builder.py  util.py
src/valiant/config/source/: __init__.py  map.py  toml.py
src/valiant/console/: __init__.py  cli.py
src/valiant/console/commands/: __init__.py  about.py  audit.py  base_command.py  command.py  config.py  package_command.py  report.py  report_helper.py  search.py  show.py
src/valiant/console/config/: __init__.py  application_config.py
src/valiant/log/: __init__.py
src/valiant/package/: __init__.py  classifier.py  model.py
src/valiant/packaging/: project.py
src/valiant/plugins/: __init__.py  exceptions.py  manager.py  plugin.py  type_manager.py
src/valiant/plugins/reports/: __init__.py  demo.py  report.py
src/valiant/provider/github/: __init__.py
src/valiant/provider/librariesio/: __init__.py
src/valiant/provider/safety/: __init__.py
src/valiant/reports/: __init__.py  factory.py  model.py  report.py  report_provider.py
src/valiant/reports/basic/: __init__.py
src/valiant/reports/github/: Github.py
src/valiant/reports/safety/: README.md  __init__.py  provider.py  safety.py
src/valiant/reports/spdx/: README.md  __init__.py  __main__.py  license.py  provider.py  spdx-licenses.pickle
src/valiant/repositories/: __init__.py  config.py  exceptions.py  factory.py  pypi.py  remote_repository.py  repository.py
src/valiant/repositories/pypi/: __init__.py  model.py  pypi.py
src/valiant/util/: __init__.py  classifier.py  dictionizer.py  requirements.py
src/valiant/util/spdx/: __init__.py  __main__.py  license.py  spdx-licenses.pickle
tests/: __init__.py  conftest.py  test_valiant.py
tests/config/: __init__.py  conftest.py  test_basics.py  test_builder.py  test_config.py  test_config_default.py  test_config_overlay_file.py  test_test_setup.py  test_valiant_config.py  util.py
tests/config/data/: basic.toml  basic_logfile.toml  config_output.toml  logging.conf  pyproject.toml  with_local_plugins.toml  with_repo.toml
tests/config/data/site_config_dir/: config.toml
tests/config/data/user_config_dir/: config.toml
tests/console/: __init__.py  conftest.py  test_cli.py
tests/console/commands/: __init__.py  test_about.py  test_audit.py  test_config_default.py  test_report.py  test_show.py
tests/console/commands/data/: requirements-small.txt
tests/fixtures/basic/: valiant.toml
tests/package/: __init__.py  test_artifact_metadata.py  test_classifier.py  test_coordinates.py  test_model.py
tests/plugins/reports/: localdemo.py
tests/plugins/reports/basic/: test_basic_report.py
tests/plugins/reports/data/: requirements-large.txt  requirements-small.txt
tests/plugins/reports/demo/: test_demo_report.py
tests/plugins/reports/safety/: test_safety.py  test_safety_e2e.py
tests/plugins/reports/spdx/: __init__.py  test_licenses.py  test_licenses_url_load.py  test_spdx_report.py
tests/reports/: __init__.py  test_finding.py
tests/reports/data/: requirements-small.txt
tests/reports/safety/: test_safety.py
tests/reports/spdx/: conftest.py  test_license.py  test_licenses.py  test_licenses_url_load.py
tests/repositories/: __init__.py  test_model.py  test_repository.py
tests/repositories/pypi/: __init__.py  conftest.py  setup.py  test_data.py  test_data_load.py  test_pypi.py  test_pypi_download.py  test_pypi_model.py  test_pypi_show.py  validation.py
tests/repositories/pypi/data/: gpiozero-1.5.1.json
tests/repositories/pypi/package-data/: appdirs-1.4.3.json  django-3.0.4.json  flask-0.1.json  flask-1.1.1.json  gpiozero-1.5.1.json  load-test-data.sh  load.sh  numpy-1.18.2.json  opencv-python-4.2.0.32.json  pandas-1.0.3.json  pipenv-2018.11.26.json  poetry-1.0.5.json  rdflib-4.2.2.json  six-1.14.0.json  tensorflow-2.1.0.json  twisted-20.3.0.json
tests/repositories/pypi/test-data/: basic_package.json  basic_package_2.json  basic_package_3.json  (+2 more)
tests/util/: __init__.py  test_classifier.py  test_dictionizer.py  test_requirements.py
tests/util/req_data/: requirements-large.txt  requirements-small.txt  valiant.txt  valiant_hashes.txt
tests/util/spdx/: test_license.py  test_license_url_load.py
tests/valiant/: __init__.py  test_valiant.py
walkthrough/: index.html
(+25 files in other folders)
